safe-discriminant/tests/fail/do_nothing_last.stderr
error: Discriminant is not compatiable with any top level `#[attr]` except `#[repr(_)]`.
 --> tests/fail/do_nothing_last.rs:7:10
  |
7 | pub enum Foo {
  |          ^^^
